# fauxnix

./: .gitignore  MANIFEST.in  PKGBUILD  README.md  pyproject.toml
src/: arguments.py  config.yaml  config.yml  fauxnix.hook  fauxnix.yaml  main.py
src/fauxnix/: arguments.py  config.py  config_parser.py  fauxnix.py  fauxnix.yaml  main.py  utils.py
